# Stokes2D

./: .gitignore  README.md  initpaths.m
src/: CMakeLists.txt
src/cmake-compat/: FindMatlab.cmake
src/matlab/: solve_stokes.m
src/matlab/boundaries/: GLinit16.m  GLinit32.m  GLinterval.m  GLinterval32.m  discretize_domain.m  discretize_domain_dyad_refine.m  discretize_domain_periodic.m
src/matlab/matvec/: completion_contribution.m  matvec_combined.m  matvec_combined_robin.m  matvec_combined_slip.m  matvec_double_layer_mobility.m  matvec_double_layer_resistance.m  matvec_double_layer_resistance_slip.m
src/matlab/special_quadrature/: create_Lmod.m
src/matlab/tools/: build_matrix.m  completion_contribution_gradient.m  completion_contribution_pressure_gradient.m  completion_contribution_stress.m  completion_contribution_velocity_gradient.m  completion_contribution_vorticity.m  compute_average_pressure.m  compute_average_pressure_gradient.m  compute_average_velocity.m  compute_average_velocity_gradient.m  compute_cell_averages.m  compute_volume_integral_circles.m  default_input_params.m  default_input_params_periodic.m  evaluate_double_layer_pressure_direct.m  evaluate_double_layer_pressure_gradient_direct.m  evaluate_double_layer_stress_direct.m  evaluate_double_layer_stress_on_surface_direct.m  plot_domain.m  (+21 more)
src/setups/: channel_blobs_periodic.m  circles_periodic.m  couette.m  curved_pipe_periodic.m  curved_rectangle.m  ellipses_periodic.m  flat_pipe_periodic.m  particles.m  periodic_pipe_setup.m  poster_blobs_periodic.m  sine_pipe_periodic.m  starfish_periodic.m
(+100 files in other folders)
